nginx-ingress-examples/DockerRegistry/ingress-tls-off.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: docker-registry
  namespace: docker-registry
spec:
  rules:
    - host: registry.<your domain>
      http:
        paths:
          - backend:
              serviceName: docker-registry
              servicePort: 5000
            path: /
